--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   flutterflow_paginate_firestore: ^1.0.3+1
   mailer: ^6.1.0
-
+  chat_bubbles: ^1.6.0
 
 
 
